# clarity

./: .gitattributes  .gitignore  .gitmodules  ABOUT.md  AGENTS.md  AI_HANDOFF.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEV_LOG.md  LICENSE  NOTICES.md  OPENCLAW_GAP_ANALYSIS.md  PROJECT_REPORT.md  PROJECT_STATUS.md  README.en.md  README.md  README.zh.md  ROADMAP.md  SECURITY.md  apply_changes.py  fix_agent.py  fix_agent_all.py  fix_errors.py  fix_files.py  fix_llm_mod.py  fix_remaining.py  llm_mod_head.rs  test_config.ps1
crates/clarity-anthropic-proxy/: AGENTS.md  Cargo.toml  README.md
crates/clarity-anthropic-proxy/src/: main.rs
crates/clarity-apps/: Cargo.toml
crates/clarity-apps/src/: about.rs  chat.rs  dashboard.rs  lib.rs  provider.rs  settings.rs  settings_data.rs  test_util.rs
crates/clarity-channels/: AGENTS.md  Cargo.toml  README.md
crates/clarity-channels/src/: lib.rs  retry.rs
crates/clarity-chrome/: Cargo.toml
crates/clarity-chrome/src/: lib.rs
crates/clarity-claw/: AGENTS.md  Cargo.toml  PROTOCOL.md  README.md
crates/clarity-claw/examples/: remote_chat.rs  remote_save_token.rs
crates/clarity-claw/src/: acp_bridge.rs  client.rs  connection_manager.rs  device.rs  discovery.rs  gateway_client.rs  lib.rs  main.rs  mesh_client.rs  netmon.rs  protocol.rs  session_routes.rs  util.rs  watchdog.rs
crates/clarity-contract/: AGENTS.md  Cargo.toml  NOTICES.md  README.md
crates/clarity-contract/benches/: retry.rs
crates/clarity-contract/src/: approval.rs  capability.rs  claw_context.rs  diff.rs  error.rs  federation.rs  identity.rs  jumpy.rs  key_ref.rs  lib.rs  lifecycle.rs  llm.rs  openclaw_protocol.rs  reliable_provider.rs  retry.rs  rollout.rs  rollout_retention.rs  settings.rs  subagent.rs  task.rs  tests.rs  thread.rs  tool.rs  tool_format.rs  tool_parser.rs  transport.rs
crates/clarity-core/: AGENTS.md  Cargo.toml  README.md
crates/clarity-core/benches/: agent_prompt.rs  skill_context.rs  tool_registry.rs
crates/clarity-core/design/: agent-lifecycle-rfc.md
crates/clarity-core/examples/: benchmark.rs  deepseek_demo.rs  mcp_config_demo.rs  mcp_config_example.json  mcp_demo.rs  mcp_filesystem_demo.rs  streaming_demo.rs  test_device_full.rs  test_device_login.rs  test_full_pipeline.rs
crates/clarity-core/scripts/: computer_bridge.py
crates/clarity-core/src/: activity.rs  agent.rs  approval.rs  capability.rs  compaction.rs  config.rs  diff.rs  endpoint.rs  error.rs  knowledge.rs  lib.rs  llm.rs  mcp.rs  model_download.rs  registry.rs  types.rs
crates/clarity-core/tests/: api_compatibility_test.rs  devbase_mcp_tier_verify.rs  integration_test.rs  mcp_contract_test.rs  mcp_debug.rs  mcp_http_e2e.rs  mcp_integration.rs  mcp_integration_single.rs  mcp_stdio_debug.rs  memory_integration_test.rs  okf_bundle_load_test.rs  streaming_e2e_test.rs
crates/clarity-egui/: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  DESIGN_PROTOCOL.md  EGUI_LAYOUT.md  EGUI_LAYOUT_DEBUG.md  README.md  TAURI_EVALUATION.md
crates/clarity-egui/docs/: egui-layout-implementation-plan.md  hanako-design-reference.md  kimi-conversation-style.md  kimi-egui-audit-2026-06-07.md  kimi-reverse-engineering.md  layout-audit-architecture-crisis.md
crates/clarity-egui/examples/: openclaw_approve_pair.rs  openclaw_device_check.rs  openclaw_pair.rs  strip_titlebar.rs
crates/clarity-egui/src/: animation.rs  app_context.rs  app_logic.rs  app_state.rs  chrome.rs  claw.rs  claw_client.rs  claw_device.rs  design_system.rs  error.rs  i18n.rs  layout.rs  lib.rs  llm_binder.rs  llm_loader.rs  llm_policy.rs  main.rs  onboarding.rs  pretext.rs  pretext_alignment.rs  provider.rs  session.rs  settings.rs  test_util.rs  theme.rs  window_manager.rs
crates/clarity-egui/tests/: memory_profile.rs  provider_registry.rs  session_roundtrip.rs  settings_persistence.rs
crates/clarity-gateway/: AGENTS.md  Cargo.toml  README.md
crates/clarity-gateway/src/: handlers.rs  health.rs  lib.rs  main.rs  role_context_store.rs  server.rs  session.rs  session_store.rs  ws.rs
crates/clarity-gateway/static/: chat-v1.html  chat.html  index.html
crates/clarity-gateway/tests/: api_integration.rs  http_integration_test.rs  webhook_e2e.rs  ws_integration_test.rs
crates/clarity-headless/: AGENTS.md  Cargo.toml  README.md
crates/clarity-headless/src/: main.rs  threads.rs
crates/clarity-headless/tests/: cli.rs
crates/clarity-knowledge/: AGENTS.md  Cargo.toml  README.md
crates/clarity-knowledge/examples/: obsidian_export.rs  scan_vault.rs  vault_benchmark.rs  vault_embedding_benchmark.rs  vault_index_qa.rs
crates/clarity-knowledge/src/: embedding.rs  error.rs  extract.rs  field.rs  graph.rs  index.rs  lib.rs  recall_store.rs  retrieval.rs  search.rs  vault_config.rs  watcher.rs
crates/clarity-llm/: AGENTS.md  Cargo.toml  README.md
crates/clarity-llm/benches/: registry_hotpath.rs
crates/clarity-llm/docs/: worktree.md
crates/clarity-llm/examples/: deepseek_device_context_test.rs  (+2 more)
crates/clarity-mcp/: AGENTS.md  Cargo.toml  README.md
crates/clarity-memory/: AGENTS.md  Cargo.toml  README.md
crates/clarity-mobile-core/: AGENTS.md  Cargo.toml  README.md  build.rs  uniffi-bindgen.rs
crates/clarity-openclaw/: AGENTS.md  Cargo.toml  PROTOCOL.md  README.md
crates/clarity-rollout/: AGENTS.md  Cargo.toml  NOTICES.md  README.md
crates/clarity-secrets/: AGENTS.md  Cargo.toml  README.md
crates/clarity-shell/: Cargo.toml
crates/clarity-slint/: AGENTS.md  Cargo.toml  README.md  build.rs
crates/clarity-subagents/: AGENTS.md  Cargo.toml  README.md
crates/clarity-tauri/: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  tauri.conf.json
crates/clarity-telemetry/: AGENTS.md  Cargo.toml  README.md
crates/clarity-thread-store/: AGENTS.md  Cargo.toml  NOTICES.md  README.md
crates/clarity-tools/: AGENTS.md  Cargo.toml  README.md
crates/clarity-tui/: AGENTS.md  Cargo.toml  README.md
crates/clarity-ui/: .gitignore  Cargo.toml
crates/clarity-wire/: AGENTS.md  Cargo.toml  README.md
tests/integration/: Cargo.toml
(+1323 files in other folders)
