[workspace]
members = ["crates/*", "tests/integration"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Clarity Team"]
license = "MIT"
repository = "https://github.com/clarity/clarity"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
clarity-core = { path = "crates/clarity-core" }

# Additional shared dependencies
regex = "1.10"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
tokio-util = "0.7"

# MCP (Model Context Protocol)
rmcp = { version = "0.1" }

# TUI dependencies
ratatui = "0.30"
crossterm = "0.29"
unicode-width = "0.2"

# Web dependencies
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
