[workspace]
members = ["crates/*", "tests/integration"]
resolver = "2"
exclude = ["crates/clarity-tauri"]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
authors = ["juice094 and contributors"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/juice094/clarity"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
clarity-core = { path = "crates/clarity-core" }
clarity-mcp = { path = "crates/clarity-mcp" }

# Additional shared dependencies
regex = "1.10"
glob = "0.3"
base64 = "0.22"
clap = "4.6"
anstyle = "1.0"
anstream = "1.0"
clap_builder = "4.6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7"] }
futures = "0.3"
tokio-util = "0.7"

# Syncthing-rust transitive dependencies (used by third_party/syncthing-rust).
# These are defined here so path-dependent syncthing crates can use workspace
# inheritance while being built inside the Clarity workspace.
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
bytes = "1.5"
dashmap = "5.5"
notify = "8"
filetime = "0.2"
similar = "2.6"
async-recursion = "1.0"
prost = "0.12"
prost-build = "0.12"
parking_lot = "0.12"
tempfile = "3"
rayon = "1.10"
num_cpus = "1.16"
ring = "0.17"
rustls = "0.23"
rustls-pemfile = "2.0"
socket2 = "0.5"
walkdir = "2"
tracing-appender = "0.2"
tokio-rustls = "0.26"
tokio-tungstenite = "0.24"
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }

# TUI dependencies
ratatui = "0.30"
crossterm = "0.29"
unicode-width = "0.2"

# Web dependencies
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.dev]
opt-level = 0
debug = true
