[package]
name = "clarity-anthropic-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Anthropic Messages API → DeepSeek App private API reverse proxy"

[[bin]]
name = "cc-proxy"
path = "src/main.rs"

[dependencies]
# Internal — only the minimal set
clarity-llm = { path = "../clarity-llm" }
clarity-contract = { path = "../clarity-contract" }

# Web framework
axum = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utils
uuid = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
