[package]
name = "clarity-claw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clarity-contract = { path = "../clarity-contract" }
clarity-core = { workspace = true }
clarity-wire = { path = "../clarity-wire" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

# GUI / System tray
tao = "0.35"
tray-icon = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }


# Notifications
notify-rust = "4"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# HTTP client for Gateway API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Filesystem watch for real-time task notifications
notify = { version = "7", default-features = false, features = ["macos_fsevent", "crossbeam-channel"] }

# Async trait support (clarity-contract uses #[async_trait])
async-trait = { workspace = true }
parking_lot = "0.12"

[lints]
workspace = true
