[package]
name = "clarity-claw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clarity-contract = { path = "../clarity-contract" }
clarity-core = { workspace = true }
clarity-wire = { path = "../clarity-wire" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

# GUI / System tray
tao = "0.35.3"
tray-icon = "0.24.1"
image = { version = "0.25", default-features = false, features = ["png"] }

# Notifications
notify-rust = "4"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Gateway WebSocket client for all Gateway communication.
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# Filesystem watch for real-time task notifications
notify = { version = "7", default-features = false, features = ["macos_fsevent", "crossbeam-channel"] }

# Intentionally not depending on clarity-openclaw: Claw is an internal mesh node
# that speaks Gateway WebSocket only; external OpenClaw/KimiClaw interop is handled
# by clarity-openclaw on the Gateway side.
parking_lot = "0.12"

[lints]
workspace = true
