[package]
name = "clarity-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core engine for Project Clarity - AI agent framework with tool registry"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
rand = "0.8"
uuid = { workspace = true }
toml = "0.8"
serde_yaml = "0.9"
dirs = "5.0"
url = "2.5"
urlencoding = "2.1"
html-escape = "0.2"

clarity-memory = { path = "../clarity-memory" }
clarity-wire = { path = "../clarity-wire" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
default = []
local-llm = []

[[bench]]
name = "tool_registry"
harness = false

[[bench]]
name = "skill_context"
harness = false

[[bench]]
name = "agent_prompt"
harness = false

