[package]
name = "clarity-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core engine for Project Clarity - AI agent framework with tool registry"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
chrono = { workspace = true }
cron = "0.15"
futures = { workspace = true }
tokio-util = { workspace = true }
rand = "0.10"
uuid = { workspace = true }
toml = "0.8"
serde_yaml = "0.9"
dirs = "5.0"
url = "2.5"
urlencoding = "2.1"
html-escape = "0.2"
tiktoken-rs = "0.11.0"
scraper = "0.19"
similar = "2"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
parking_lot = "0.12"
notify = "6"
pulldown-cmark = "0.13"
smol_str = { version = "0.3", features = ["serde"] }

clarity-contract = { path = "../clarity-contract" }
clarity-memory = { path = "../clarity-memory" }
clarity-mcp = { path = "../clarity-mcp" }
clarity-wire = { path = "../clarity-wire" }
clarity-llm = { path = "../clarity-llm" }
clarity-tools = { path = "../clarity-tools" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"
anyhow = { workspace = true }
axum = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
default = ["local-llm", "mcp"]
local-llm = ["clarity-llm/local-llm"]
local-llm-cuda = ["clarity-llm/local-llm-cuda"]
mcp = []

[[bench]]
name = "tool_registry"
harness = false

[[bench]]
name = "skill_context"
harness = false

[[bench]]
name = "agent_prompt"
harness = false

