[package]
name = "clarity-egui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Clarity Desktop GUI powered by egui — replaces Tauri"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "x11"] }
egui = "0.31"
egui_extras = "0.31"  # StripBuilder declarative chrome layout; see S2.P1.x / EGUI_LAYOUT.md RULE 6.
lucide-icons = "1.14"  # Lucide icon font (framework-agnostic LUCIDE_FONT_BYTES + Icon enum); see ADR-010.

serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
parking_lot = "0.12"
uuid = { workspace = true }
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = { workspace = true }
html-escape = "0.2"
once_cell = "1"
raw-window-handle = "0.6"
rfd = "0.15"
tray-icon = "0.24.1"

# Internal crates
clarity-core = { path = "../clarity-core" }
clarity-contract = { path = "../clarity-contract" }
clarity-llm = { path = "../clarity-llm" }
clarity-memory = { path = "../clarity-memory" }
clarity-subagents = { path = "../clarity-subagents" }
clarity-tools = { path = "../clarity-tools" }
clarity-wire = { path = "../clarity-wire" }

# Pretext text measurement. Pinned to a stable rev; update intentionally.
pretext-core = { git = "https://github.com/juice094/pretext-rust.git", rev = "d90e6085383aa170a70c70e153222a95cae9e545" }
pretext-fontdb = { git = "https://github.com/juice094/pretext-rust.git", rev = "d90e6085383aa170a70c70e153222a95cae9e545" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Graphics_Dwm"] }

[features]
default = []
line-mode = []
hermes = ["clarity-core/hermes", "clarity-memory/hermes"]

[[bin]]
name = "clarity-egui"
path = "src/main.rs"

[lints]
workspace = true
