[package]
name = "clarity-egui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Clarity Desktop GUI powered by egui — replaces Tauri"

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_commonmark = { workspace = true, features = ["better_syntax_highlighting"] }
egui_dock = { workspace = true }
lucide-icons = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
parking_lot = "0.12"
uuid = { workspace = true }
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = { workspace = true }
html-escape = "0.2"
once_cell = "1"
raw-window-handle = "0.6"
rfd = "0.15"
tray-icon = "0.24.1"
webbrowser = "1"

# Internal crates
clarity-apps = { path = "../clarity-apps" }
clarity-core = { path = "../clarity-core" }
clarity-chrome = { path = "../clarity-chrome" }
clarity-knowledge = { path = "../clarity-knowledge" }
clarity-claw = { path = "../clarity-claw", default-features = false, features = ["mesh"] }
clarity-contract = { path = "../clarity-contract" }
clarity-llm = { path = "../clarity-llm" }
clarity-memory = { path = "../clarity-memory" }
clarity-shell = { path = "../clarity-shell" }
clarity-subagents = { path = "../clarity-subagents" }
clarity-tools = { path = "../clarity-tools" }
clarity-wire = { path = "../clarity-wire" }
clarity-ui = { path = "../clarity-ui" }

# Pretext text measurement. Pinned to a stable rev; update intentionally.
pretext-core = { git = "https://github.com/juice094/pretext-rust.git", rev = "d90e6085383aa170a70c70e153222a95cae9e545" }
pretext-fontdb = { git = "https://github.com/juice094/pretext-rust.git", rev = "d90e6085383aa170a70c70e153222a95cae9e545" }

# Syntax highlighting for code blocks (cold-path pre-parsing).
syntect = { version = "5", default-features = false, features = ["parsing", "default-syntaxes", "default-themes", "regex-fancy"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Graphics_Dwm"] }

# Optional SVG rendering support via resvg + tiny-skia (Mermaid diagrams, icons).
resvg = { version = "0.44", optional = true }
tiny-skia = { version = "0.11", optional = true }

[features]
default = []
line-mode = []
hermes = ["clarity-core/hermes", "clarity-memory/hermes"]
svg = ["resvg", "tiny-skia"]

[[bin]]
name = "clarity-egui"
path = "src/main.rs"

[dev-dependencies]
egui_kittest = { workspace = true, features = ["snapshot", "wgpu"] }
tempfile = { workspace = true }

[lints]
workspace = true
