[package]
name = "clarity-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP/WebSocket gateway for Project Clarity"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Internal dependencies
clarity-core = { workspace = true }
clarity-wire = { path = "../clarity-wire" }

# Web dependencies
axum = { workspace = true }
tower-http = { workspace = true, features = ["cors", "fs", "trace"] }

# HTTP client for Webhook
reqwest = { version = "0.12", features = ["json"] }

# Webhook signature verification
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
tokio-tungstenite = "0.24"
http-body-util = "0.1"
tower = "0.5"

[features]
default = ["webhook"]
# Discord/Telegram features are temporarily disabled from default due to upstream
# security advisories in rustls-webpki (via serenity). Re-enable when fixed.
discord = []
telegram = []
webhook = []
