[package]
name = "clarity-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP/WebSocket gateway for Project Clarity"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Internal dependencies
clarity-channels = { path = "../clarity-channels" }
clarity-contract = { path = "../clarity-contract" }
clarity-core = { workspace = true }
clarity-llm = { path = "../clarity-llm" }
clarity-mcp = { path = "../clarity-mcp" }
clarity-memory = { path = "../clarity-memory", features = ["sqlite"] }
clarity-rollout = { path = "../clarity-rollout" }
clarity-secrets = { path = "../clarity-secrets" }
clarity-thread-store = { path = "../clarity-thread-store" }
clarity-subagents = { path = "../clarity-subagents" }
clarity-telemetry = { path = "../clarity-telemetry", optional = true }
clarity-wire = { path = "../clarity-wire" }

# SQLite for persistent session store
rusqlite = { version = "0.34", features = ["bundled-full"] }

# Web dependencies
axum = { workspace = true }
tower-http = { workspace = true, features = ["cors", "fs", "trace"] }

# HTTP client for Webhook
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Webhook signature verification
hmac = "0.12"
sha2 = "0.10"
base64 = { workspace = true }

# Slack SDK
slack-morphism = { version = "2.8", features = ["hyper"], optional = true }
parking_lot = "0.12"
dirs = "5.0"
toml = "0.8"

[dev-dependencies]
tokio-tungstenite = "0.24"
http-body-util = "0.1"
tower = "0.5"
tempfile = "3.9"

[features]
default = ["webhook"]
# Discord/Telegram features are temporarily disabled from default due to upstream
# security advisories in rustls-webpki (via serenity). Re-enable when fixed.
discord = []
telegram = []
slack = ["dep:slack-morphism"]
telemetry-api = ["dep:clarity-telemetry"]
webhook = []
hermes = ["clarity-core/hermes"]

[lints]
workspace = true
