[package]
name = "clarity-headless"
version.workspace = true
edition = "2021"

[dependencies]
clarity-core = { path = "../clarity-core" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"

[features]
default = []
local-llm = ["clarity-core/local-llm"]

[[bin]]
name = "clarity-headless"
path = "src/main.rs"
