[package]
name = "clarity-headless"
version.workspace = true
edition.workspace = true

[dependencies]
clarity-core = { path = "../clarity-core" }
clarity-llm = { path = "../clarity-llm" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
dirs = "5.0"

[features]
default = []
local-llm = ["clarity-core/local-llm"]

[[bin]]
name = "clarity-headless"
path = "src/main.rs"

[lints]
workspace = true
